<?xml version="1.0"?>
<package format="2">
  <name>pioneer_control</name>
  <version>0.0.0</version>
  <description>The Pioneer package</description>

  <maintainer email="amap@todo.todo">amap</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>  <!-- 수정: geomtry_msgs → geometry_msgs -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>  <!-- 수정: geomtry_msgs → geometry_msgs -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>  <!-- 수정: geomtry_msgs → geometry_msgs -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- 다른 도구에서 필요한 정보를 추가로 포함할 수 있습니다. -->
  </export>
</package>
